# fuel-Aware-smart-inventory-system

./: .editorconfig  .gitignore  CODEOWNERS  CONTRIBUTING.md  README.md
.github/: labels.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  integration_blocker.yml  task.yml
.github/workflows/: backend-ci.yml  frontend-ci.yml  mobile-ci.yml  repo-health.yml
backend/: .env.example  .gitignore  README.md  index.js  package-lock.json  package.json  pyproject.toml  schema.sql
backend/analytics/: config.py  db.py  main.py
backend/src/: app.js  index.js  supabase.js  supabaseClient.js
backend/src/middleware/: validateTelemetry.js
backend/src/routes/: telemetry.js  vehicles.js
backend/tests/: telemetry.test.js
docs/: API_CONTRACTS.md  ARCHITECTURE.md  DATA_MODEL.md  DEMO_PLAN.md  FEATURES.md  OWNERSHIP_MATRIX.md  PROJECT_CHARTER.md  README.md  REPO_SETUP.md  RISKS.md  ROADMAP.md  TASK_SLICING.md  TESTING.md  WORKFLOW.md
