[project]
name = "fuel-aware-backend"
version = "0.1.0"
description = "FastAPI backend bootstrap for the Fuel-Aware Smart Inventory System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "psycopg[binary]>=3.2.0",
    "psycopg-pool>=3.2.0",
    "pydantic-settings>=2.6.0",
    "uvicorn[standard]>=0.30.0",
]

[tool.uv]
package = false
